--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,6 +78,7 @@
     <footer class="faixa">
         <p>Desenvolvido por @eucaiosilvawebs</p>
     </footer>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
